--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -11,7 +11,7 @@
   "tasks": {
     "start": {
       "name": "start",
-      "command": "yarn dev",
+      "command": "yarn build-client && yarn dev",
       "runAtStart": true
     }
   }
