--- a/package.json
+++ b/package.json
@@ -17,14 +17,12 @@
   "homepage": "https://github.com/codesandbox-app/static-template#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.0-canary-c5b937576-20231219",
+    "react-dom": "^18.3.0-canary-c5b937576-20231219"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
     "esbuild": "^0.19.10",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
