pin react version that was causing it to revert to react next version and cause errors with async components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "dist",
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "nodenext",
-    "module": "NodeNext"
+    "module": "NodeNext",
+    "types": ["react/canary"]
   },
   "include": ["src/**/*"]
 }
